added content structure of the thesis

--- a/thesis/countermachine.tex
+++ b/thesis/countermachine.tex
@@ -78,7 +78,12 @@
 \pagestyle{plain}
 \input{src/titlepage}%
 \tableofcontents
-%\include{src/examples}
+\include{src/introduction}
+\include{src/background}
+\include{src/simulator}
+\include{src/limitations}
+\include{src/future_work}
+\include{src/conclusions}
 \end{document}
 
 % vim: tw=80 nospell spelllang=en nocul
