continued writing background

--- a/thesis/bib.bib
+++ b/thesis/bib.bib
@@ -31,3 +31,22 @@
 	year = {1971}
 }
 
+@article{Shepherdson:1963:CRF:321160.321170,
+ author = {Shepherdson, J. C. and Sturgis, H. E.},
+ title = {Computability of Recursive Functions},
+ journal = {J. ACM},
+ issue_date = {April 1963},
+ volume = {10},
+ number = {2},
+ month = apr,
+ year = {1963},
+ issn = {0004-5411},
+ pages = {217--255},
+ numpages = {39},
+ url = {http://doi.acm.org/10.1145/321160.321170},
+ doi = {10.1145/321160.321170},
+ acmid = {321170},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+} 
+
