--- a/thesis/countermachine.tex
+++ b/thesis/countermachine.tex
@@ -11,6 +11,10 @@
 \usepackage{amsmath}
 \usepackage{ifthen}
 \usepackage{xspace}
+\usepackage{import}
+\usepackage{calc}
+\usepackage{float}
+\usepackage{listings}
 \usepackage[pdftex,
   pdfauthor={Michael Banken},
   pdftitle={Simulation of countermachines},
@@ -19,6 +23,8 @@
 \usepackage{graphicx}
 %\usepackage[right]{showlabels}
 %\usepackage[justific=raggedright,totoc]{idxlayout}
+
+\graphicspath{{img/}}
 
 \addto\extrasenglish{%
   \renewcommand{\chapterautorefname}{Section}
