fixed error in limit calculations

--- a/thesis/src/limitations.tex
+++ b/thesis/src/limitations.tex
@@ -39,7 +39,7 @@ main
 s:	call subroutine$\frac{n}{2}-1$ 0
 \end{lstlisting}
 It is immediately obvious that this program consists of n instructions that will expand into $2^{\frac{n}{2}}$ instructions when parsed into the internal representation. It is easy to see that one can construct a similar program for any other natural number.
-This means that the maximum blowup lies somewhere between $\lim_{x\to\infty}$ $x^{\frac{n}{x}}$ and $n^{n}$.
+This means that the maximum blowup lies somewhere between $2^{\frac{n}{2}}$ and $n^{n}$.
 \section{Runtime}
 \subsection{Simulator performance}
 \subsection{Computational complexities of Minsky programs}
