added semantics to background

--- a/thesis/countermachine.tex
+++ b/thesis/countermachine.tex
@@ -15,6 +15,7 @@
 \usepackage{calc}
 \usepackage{float}
 \usepackage{listings}
+\usepackage{stmaryrd}
 \usepackage[pdftex,
   pdfauthor={Michael Banken},
   pdftitle={Simulation of countermachines},
