added motivation to introduction

--- a/thesis/bib.bib
+++ b/thesis/bib.bib
@@ -50,3 +50,23 @@
  address = {New York, NY, USA},
 } 
 
+@article{Chakraborty:2011:FYA:2038876.2038893,
+ author = {Chakraborty, Pinaki and Saxena, P. C. and Katti, C. P.},
+ title = {Fifty Years of Automata Simulation: A Review},
+ journal = {ACM Inroads},
+ issue_date = {December 2011},
+ volume = {2},
+ number = {4},
+ month = dec,
+ year = {2011},
+ issn = {2153-2184},
+ pages = {59--70},
+ numpages = {12},
+ url = {http://doi.acm.org/10.1145/2038876.2038893},
+ doi = {10.1145/2038876.2038893},
+ acmid = {2038893},
+ publisher = {ACM},
+ address = {New York, NY, USA},
+ keywords = {automata simulator, pedagogical tool},
+} 
+
