added labels to chapters

--- a/thesis/src/future_work.tex
+++ b/thesis/src/future_work.tex
@@ -1,3 +1,4 @@
 \chapter{Future Work}
+\label{chap:future}
 \section{Adding additional instruction sets}
 \section{Improving memory efficiency through more efficient representation of programs}
