--- a/thesis/src/introduction.tex
+++ b/thesis/src/introduction.tex
@@ -12,4 +12,4 @@ In \autoref{chap:background} we will begin with a definition of both counter mac
 In \autoref{chap:simulator} we will take a look at countersim itself, both how to use it and how it is implemented.\\
 In \autoref{chap:limitations} we will look at limitations the simulator faces, like memory and runtime limitations.\\
 In \autoref{chap:future} we will discuss possible future improvements of the simulator, to increase both its scope of applicability by adding more variants of counter machines and to increase its memory efficiency.\\
-At last in autoref{chap:conclusions} we will discuss the conclusion to draw from this work.
+At last in \autoref{chap:conclusions} we will discuss the conclusion to draw from this work.
