--- a/thesis/src/simulator.tex
+++ b/thesis/src/simulator.tex
@@ -1,4 +1,5 @@
 \chapter{The simulator}
+\label{chap:simulator}
 \section{Syntax and semantics}
 \section{Usage of the simulator}
 \subsection{None-graphical mode}
