added some points on implementation

--- a/thesis/src/future_work.tex
+++ b/thesis/src/future_work.tex
@@ -2,3 +2,4 @@
 \label{chap:future}
 \section{Adding additional instruction sets}
 \section{Improving memory efficiency through more efficient representation of programs}
+\label{future:call}
