--- a/thesis/src/simulator.tex
+++ b/thesis/src/simulator.tex
@@ -5,6 +5,8 @@
 \subsection{None-graphical mode}
 \subsection{Graphical user interface}
 \subsection{Requirements}
+For licensing reasons countersim is written to be dynamically linked against the QT library version 4.8, so the library needs to be present in order to successfully run countersim.\\
+It also uses the program\_options library that is part of the boost library version 1.55.0.
 \section{Implementation details}
 \subsection{Representing the program}
 In order to speed up the simulation the program is internally transformed into object form before execution. The parsing process will be explained in more detail below.\\
